# PBL2

./: AdvancedTaskDialog.cpp  AdvancedTaskDialog.h  CMakeLists.txt  CategoryItemWidget.cpp  CategoryItemWidget.h  Mo_ta.docx  Notification.cpp  Notification.h  Task.cpp  Task.h  TaskItemQwidget.cpp  TaskItemQwidget.h  TaskListWidget.cpp  TaskListWidget.h  Trie.cpp  Trie.h  Trie1.cpp  Vector.cpp  Vector.h  custom_hashmap.h  heap_manager.cpp  heap_manager.h  main.cpp  main1.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mo_ta.md  resources.qrc
.cache/clangd/index/: Task.cpp.7439E5597DF624C9.idx  Task.h.9AC27BABBFC4AE81.idx  custom_hashmap.h.501FEE13EBD5CA6E.idx  heap_manager.cpp.B18750EBE25E3295.idx  heap_manager.h.9E13A20B6E3FC370.idx  main.cpp.0C73E3E74346DD64.idx  mainwindow.cpp.BE8D5499002D3C47.idx  mainwindow.h.FE2D1C91EB965343.idx
Data/: categories.txt  tasks.txt  test.txt  testcategories.txt
resources/: style.qss
